# spiral

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  README.md  TODO.md  pyproject.toml
.alpine/: .profile  .screenrc
.docker/: .launchrc
config/: spiral.development.local.yaml  spiral.development.yaml  spiral.production.local.yaml  spiral.production.yaml  spiral.testing.local.yaml  spiral.testing.yaml  spiral.yaml
config/spiral/: base.yaml  development.yaml  production.yaml  testing.yaml
config/spiral/base.d/: ai.yaml  automate.yaml  diskcache.yaml  dramatiq.yaml  grpc.yaml  log.yaml  nicegui.yaml  pdoc.yaml  pocketbase.yaml  scheduler.yaml  smtp.yaml  smtpd.yaml  template.yaml  vault.yaml
config/spiral/development.d/: grpc.yaml  nicegui.yaml  pdoc.yaml  scheduler.yaml
config/spiral/production.d/: smtp.yaml
config/spiral/testing.d/: ai.yaml  log.yaml
spiral/: __init__.py  main.py
spiral/app/fundi/: FUNDI-LLM.md  data.py  infer.py  train.py
spiral/controllers/: __init__.py  base.py  emit.py  grpccall.py
spiral/core/: __init__.py  exc.py
spiral/core/ai/: __init__.py  akili.py  fundi.py
spiral/core/ai/guards/: __init__.py  truncate.py
spiral/core/ai/providers/: akili.py
spiral/core/ai/tools/: add_days.py  add_months.py  add_years.py  append_file.py  calc.py  calc42.py  current.py  date_daydiff.py  date_diff.py  moon_phase.py  read_file.py  week_number.py  weekday.py
spiral/core/ai/transformers/: __init__.py  truncate.py
spiral/core/akili/: AKILI-LEX.yaml  AKILI-LLM.md  AKILI-USE.md  __init__.py  data.py  infer.py  train.py
spiral/core/fundi/: FUNDI-LEX.yaml  FUNDI-LLM.md  data.py  infer.py  tokenizer.py  train.py
spiral/core/grpc/: __init__.py  spiral_interceptor.py  spiral_servicer.py
spiral/core/grpc/proto/: spiral.proto  spiral_pb2.py  spiral_pb2.pyi  spiral_pb2_grpc.py
spiral/core/logic/: __init__.py  exc.py
spiral/core/pages/: api.py  index.py  layout.py  page.py
spiral/core/smtpd/: events_handler.py
spiral/core/tasks/: __init__.py  agents.py  automate.py  performers.py
spiral/core/utils/: __init__.py
spiral/ext/: __init__.py
spiral/plugins/: __init__.py
spiral/site/: __init__.py  apis.py  openapi.py  routes.py
spiral/site/apis/: example.py
spiral/site/components/: blocks.py  layout.py
spiral/site/pages/: index.py
spiral/templates/: __init__.py
spiral/templates/pdoc/html/: config.mako
tests/: __init__.py
tests/app/: test_spiral_app.py
tests/core/ai/: test_wasm.py
tests/core/akili/: test_akili.py
tests/core/fundi/: test_fundi.py
tests/core/grpc/: test_grpc.py
tests/ext/: test_ai.py  test_ai_fundi.py
tests/ext/ai/: test_ai.py
