[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spiral"
dynamic = ["version"]  # Declare version as dynamic
description = "Spiral is easily crafted with Tokeo and is the example app!"
readme = "README.md"
authors = [
    {name = "Tom Freudenberg", email = "th.freudenberg@gmail.com"}
]
license = "MIT"
urls = {"Homepage" = "https://github.com/tokeo/spiral/"}
requires-python = ">=3.10"  # Adjust based on your needs
dependencies = [
    "tokeo==1.3.0",
    "tokeo-fundi==1.3.0",
    "cement==3.0.14",
    "cement[jinja2]",
    "jinja2",
    "cement[yaml]",
    "PyYAML",
    "cement[colorlog]",
    "colorlog",
    "lazy_loader",
    "prompt_toolkit",
    "diskcache",
    "dramatiq",
    "dramatiq[rabbitmq]",
    "pika",
    "grpcio",
    "grpcio-tools",
    "protobuf",
    "apscheduler>=3.0,<4.0",
    "requests",
    "nicegui>=3.12.1",
    "fastapi",
    "starlette",
    "pydantic[email]",
    "pocketbase>=0.15.0",
    "invoke>=2.2.1",
    "paramiko>=2.7,<4",
    "httpx",
    "numpy",
    "numba",
    "torch",
    "wasmtime",
    "cryptography>=45.0.0",
]

[project.optional-dependencies]
dev = [
    "pip-tools>=7.0.0",
    "pytest>=8.5.0",
    "pytest-cov>=6.0.0",
    "coverage>=7.10.0",
    "twine>=6.0.0",
    "setuptools>=75.0.0",
    "wheel>=0.40.0",
    "pyink>=25.0.0",
    "flake8>=7.0.0",
    "pdoc3>=0.11.0",
    "watchdog",
    "dramatiq[watch]",
    "watchdog_gevent",
    "gevent",
]

[project.scripts]
spiral = "spiral.main:main"

[tool.setuptools]
packages = {find = {include = ["spiral", "spiral.*"], exclude = ["ez_setup", "tests*"]}}
include-package-data = true

[tool.setuptools.package-data]
"spiral" = ["**/*.md", "templates/*", "templates/**/*", "templates/**/.*", "**/*.proto"]

[tool.setuptools.dynamic]
version = {attr = "spiral.core.version.get_version"}
